<resources>
    <string name="app_name">Student Diary</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="add_record">Add Record</string>
    <string name="view_record">View Records</string>
    <string name="play_videos">Play Videos</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone_no">Phone No. -</string>
    <string name="roll_no">Roll No. -</string>
    <string name="name">Name -</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="enter_roll_no_to_update">Enter Roll No. to update</string>
    <string name="enter_name_to_update">Enter name to update</string>
    <string name="enter_phone_no_to_update">Enter PhoneNo to update</string>
    <string name="update_records">Update Records</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_text_to_search">Enter text to Search</string>
    <string name="enter_location_to_update">Enter location to Update</string>
    <string name="no_db_text">Database is empty!!</string>
    <string name="web_client_id">401737742013-r7tr7f3bvu09di85g9s1ncvvlc9o37pk.apps.googleusercontent.com</string>
    <string name="address">Address</string>
</resources>